[metadata]
name = xmule
description = mule IO for xarray
long_description = file: README.rst
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
package_dir=
    =src
packages= find:
install_requires=
    mule
    xarray

[options.packages.find]
where=src
